correct hover album on mobile

--- a/wp-content/themes/ariel/style.css
+++ b/wp-content/themes/ariel/style.css
@@ -63,6 +63,10 @@
  }
 
  @media screen and (max-width: 992px){
+   .albums-carousel .album .hover{
+      display: none;
+   }
+
     #albums .top-carouselnav{
         top: 60px;
     }
